// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateNewDashboardModal /> should match snapshot 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-2"
    id="customized-dialog-title"
  >
    <div
      class="MuiBox-root MuiBox-root-5 Component-titleContainer-4"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        New Dashboard
      </h5>
      <button
        aria-label="close"
        class="MuiButtonBase-root MuiIconButton-root Component-closeButton-3"
        data-testid="button-icon-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-6 MuiDialogContent-dividers"
  >
    <div
      class="MuiBox-root MuiBox-root-7 makeStyles-addProjectModal-1"
    >
      <div
        class="MuiBox-root MuiBox-root-8"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
          >
            <div
              class="MuiBox-root MuiBox-root-14 makeStyles-labelContainer-12"
            >
              <label
                class="makeStyles-label-13"
                for="project-title"
              >
                Project Title
              </label>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
          />
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
          >
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
              >
                <input
                  aria-describedby="project-title-helper-text"
                  aria-invalid="false"
                  class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-10"
                  id="project-title"
                  type="text"
                  value="Untitled Project"
                />
              </div>
              <p
                class="MuiFormHelperText-root makeStyles-helperText-9 MuiFormHelperText-contained MuiFormHelperText-filled"
                id="project-title-helper-text"
              >
                Specify the name of the project
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
        >
          <div
            class="MuiBox-root MuiBox-root-15 makeStyles-labelContainer-12"
          >
            <label
              class="makeStyles-label-13"
              for="dashboard-title"
            >
              Dashboard Title
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="dashboard-title-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-10"
                id="dashboard-title"
                type="text"
                value="Untitled Dashboard"
              />
            </div>
            <p
              class="MuiFormHelperText-root makeStyles-helperText-9 MuiFormHelperText-contained MuiFormHelperText-filled"
              id="dashboard-title-helper-text"
            >
              Specify the name of the dashboard
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialogActions-root WithStyles(ForwardRef(DialogActions))-root-16 MuiDialogActions-spacing"
  >
    <div
      class="MuiBox-root MuiBox-root-18 makeStyles-buttonGroup-17"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-focusVisible Mui-focusVisible"
        data-testid="button-create"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          create
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<CreateNewDashboardModal /> should match snapshot only with dashboard text field 1`] = `
<div
  aria-labelledby="customized-dialog-title"
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root Component-root-20"
    id="customized-dialog-title"
  >
    <div
      class="MuiBox-root MuiBox-root-23 Component-titleContainer-22"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        New Dashboard
      </h5>
      <button
        aria-label="close"
        class="MuiButtonBase-root MuiIconButton-root Component-closeButton-21"
        data-testid="button-icon-close"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <div
    class="MuiDialogContent-root WithStyles(ForwardRef(DialogContent))-root-24 MuiDialogContent-dividers"
  >
    <div
      class="MuiBox-root MuiBox-root-25 makeStyles-addProjectModal-19"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-grid-xl-12"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
        >
          <div
            class="MuiBox-root MuiBox-root-31 makeStyles-labelContainer-29"
          >
            <label
              class="makeStyles-label-30"
              for="dashboard-title"
            >
              Dashboard Title
            </label>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-1"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7"
        >
          <div
            class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
          >
            <div
              class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-fullWidth MuiInputBase-formControl"
            >
              <input
                aria-describedby="dashboard-title-helper-text"
                aria-invalid="false"
                class="MuiInputBase-input MuiFilledInput-input makeStyles-inputField-27"
                id="dashboard-title"
                type="text"
                value="Untitled Dashboard"
              />
            </div>
            <p
              class="MuiFormHelperText-root makeStyles-helperText-26 MuiFormHelperText-contained MuiFormHelperText-filled"
              id="dashboard-title-helper-text"
            >
              Specify the name of the dashboard
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialogActions-root WithStyles(ForwardRef(DialogActions))-root-32 MuiDialogActions-spacing"
  >
    <div
      class="MuiBox-root MuiBox-root-34 makeStyles-buttonGroup-33"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-focusVisible Mui-focusVisible"
        data-testid="button-create"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          create
        </span>
        <span
          class="MuiTouchRipple-root"
        >
          <span
            class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
            style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
          >
            <span
              class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
